--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -59,6 +59,6 @@
   <string name="pref_info_about">Om</string>
   <string name="pref_info_changelog">Ændringslog</string>
   <string name="pref_info_changelog_desc">Vis ændringslog</string>
-  <string name="pref_info_website">Google+</string>
-  <string name="pref_info_website_url">https://plus.google.com/u/0/communities/109352646351468373340</string>
+  <string name="pref_info_website">Stats Example</string>
+  <string name="pref_info_website_url">https://own-rom.sourceforge.io/romstats/stats.php</string>
 </resources>
