--- a/res/values-hr/strings.xml
+++ b/res/values-hr/strings.xml
@@ -64,6 +64,6 @@
   <string name="pref_info_about">O aplikaciji</string>
   <string name="pref_info_changelog">Popis promjena</string>
   <string name="pref_info_changelog_desc">Prikaz popisa promjena</string>
-  <string name="pref_info_website">Google+</string>
-  <string name="pref_info_website_url">https://plus.google.com/u/0/communities/109352646351468373340</string>
+  <string name="pref_info_website">Stats Example</string>
+  <string name="pref_info_website_url">https://own-rom.sourceforge.io/romstats/stats.php</string>
 </resources>
