--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -61,6 +61,6 @@
   <string name="pref_info_about">Riguardo a</string>
   <string name="pref_info_changelog">Registro modifiche</string>
   <string name="pref_info_changelog_desc">Visualizza il registro delle modifiche</string>
-  <string name="pref_info_website">Google+</string>
-  <string name="pref_info_website_url">https://plus.google.com/u/0/communities/109352646351468373340</string>
+  <string name="pref_info_website">Stats Example</string>
+  <string name="pref_info_website_url">https://own-rom.sourceforge.io/romstats/stats.php</string>
 </resources>
