--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -61,6 +61,6 @@
   <string name="pref_info_about">Over</string>
   <string name="pref_info_changelog">Wijzigingen</string>
   <string name="pref_info_changelog_desc">Toon de lijst van wijzigingen</string>
-  <string name="pref_info_website">Google+</string>
-  <string name="pref_info_website_url">https://plus.google.com/u/0/communities/109352646351468373340</string>
+  <string name="pref_info_website">Stats Example</string>
+  <string name="pref_info_website_url">https://own-rom.sourceforge.io/romstats/stats.php</string>
 </resources>
