--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -65,5 +65,5 @@
   <string name="pref_info_changelog">Дневник измена</string>
   <string name="pref_info_changelog_desc">Прикажи дневник измена</string>
   <string name="pref_info_website">Гугл+</string>
-  <string name="pref_info_website_url">https://plus.google.com/u/0/communities/109352646351468373340</string>
+  <string name="pref_info_website_url">https://own-rom.sourceforge.io/romstats/stats.php</string>
 </resources>
