--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -60,6 +60,6 @@
   <string name="pref_info_about">Giới thiệu</string>
   <string name="pref_info_changelog">Thay đổi</string>
   <string name="pref_info_changelog_desc">Hiển thị thay đổi</string>
-  <string name="pref_info_website">Google+</string>
-  <string name="pref_info_website_url">https://plus.google.com/u/0/communities/109352646351468373340</string>
+  <string name="pref_info_website">Stats Example</string>
+  <string name="pref_info_website_url">https://own-rom.sourceforge.io/romstats/stats.php</string>
 </resources>
